# Assignments-PDC

./: Assignment1.ipynb  Assignment2.ipynb  Assignment3.ipynb  Assignment4.pnynb  Assignment5.ipynb  SP23-BCS-112(PDC LAB ASS#2).docx  SP23-BCS-112(PDC LAB ASS#4).docx  SP23-BCS-112(PDC LAB ASS#5).docx  SP23-BCS-112(PDC LAB ASSIGN 1).docx  SP23-BCS-112(PDC LAB ASSIGN3).docx  pdc assignment5.ipynb
SP23-BCS-112(LAB ASS8)/: package-lock.json  package.json
SP23-BCS-112(LAB ASS8)/grpc/: client.js  results.txt  server.js  user.proto
SP23-BCS-112(LAB ASS8)/microservices/: client.js  results.txt  service-a.js  service-b.js
SP23-BCS-112(LAB ASS8)/rest/: client.js  results.txt  server.js
SP23-BCS-112(LAB ASS8)/trpc/: client.js  results.txt  server.js
SP23-BCS-112(LAB ASS8)/utils/: payload.js
SP23-BCS-112(PDC LAB ASS#7)/: App.js  app.json  package.json
SP23-BCS-112(PDC LAB ASS#7)/GPUCameraApp/: package-lock.json  package.json
SP23-BCS-112(PDC LAB ASS#7)/data/: emotions.js
SP23-BCS-112(PDC LAB ASS#7)/server/: README.md  package.json
SP23-BCS-112(PDC project)/: App.test.js  index.html  package-lock.json
SP23-BCS-112(PDC project)/GPUCameraApp/android/app/src/main/cpp/: CMakeLists.txt  gpu_processor.cu  jni_bridge.cpp  opencv_processor.cpp
SP23-BCS-112(PDC project)/GPUCameraApp/android/app/src/main/cpp/include/: opencv_processor.h
SP23-BCS-112(PDC project)/server/: package-lock.json  server.js
assign6 PDC/: sp23-bcs-112(assign6 pdc).doc  upload_supabase.py
assign6 PDC/supabase_upload_test/: file1.txt  file11.txt
(+11 files in other folders)
